--- a/en-US/1.learn-more-about-oceanbase/4.compatibility-with-oracle/1.overview-of-compatibility-with-oracle.md
+++ b/en-US/1.learn-more-about-oceanbase/4.compatibility-with-oracle/1.overview-of-compatibility-with-oracle.md
@@ -159,7 +159,7 @@ OceanBase Database is compatible with some system views of Oracle Database, incl
 
 For a detailed list of compatible views, see [System views](4.system-view.md).
 
-For more information about fields of system views, see [System views](../../7.reference/5.system-reference/5.system-overview-of-oracle-mode/1.overview-of-oracle-mode.md) in the Reference guide.
+For more information about fields of system views, see [System views](../../7.reference/5.system-reference/5.system-overview-of-oracle-mode/1.overview-of-oracle-mode.md).
 
 ## Character sets and collations
 
@@ -207,7 +207,7 @@ For more information about the syntax for creating, modifying, and deleting tabl
 
 * OceanBase Database does not support the addition or dropping of subpartitions for template-based subpartitioned tables.
 
-For more information about partitioning, see the [Partition overview](../../7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/1.partition-overview-of-oracle-mode.md) topic in Administrator Guide.
+For more information about partitioning, see [Partition overview](../../7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/1.partition-overview-of-oracle-mode.md).
 
 **Index management**
 
@@ -359,7 +359,7 @@ The SQL engine of OceanBase Database does not support the following features:
 
 * Approximate query processing (AQP)
 
-For more information about the SQL engine of OceanBase Database, see [SQL tuning](../../7.reference/3.performance-tuning-guide/5.sql-optimization/1.sql-request-execution-process.md).
+For more information about the SQL engine of OceanBase Database, see [SQL tuning](../../7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/1.overview-of-sql-optimization.md).
 
 ## Unsupported features
 
