--- a/en-US/1.learn-more-about-oceanbase/5.compatibility-with-mysql.md
+++ b/en-US/1.learn-more-about-oceanbase/5.compatibility-with-mysql.md
@@ -2,7 +2,7 @@
 
 This topic describes the compatibility between OceanBase Database in MySQL mode and native MySQL Database.
 
-OceanBase Database in MySQL mode is compatible with most features and statements of MySQL 5.7 and 8.0. Some features are not supported because of their limited popularity or the product architecture differences between the two databases. This topic will cover the following aspects of compatibility between OceanBase Database and Oracle Database:
+OceanBase Database in MySQL mode is compatible with most features and statements of MySQL 5.7 and 8.0. Some features are not supported because of their limited popularity or the product architecture differences between the two databases. This topic will cover the following aspects of compatibility between OceanBase Database and MySQL Database:
 
 * Data types
 
@@ -135,7 +135,7 @@ For more information about PL features, see [PL reference](../7.reference/4.deve
 
 OceanBase Database implements most views of two internal databases: `information_schema` and `mysql`. However, due to the differences from MySQL Database in architecture, OceanBase Database cannot implement all views of MySQL Database or ensure consistency with MySQL Database in all column meanings of the views.
 
-For more information about system views, see the [System views](../7.reference/5.system-reference/4.system-overview-of-mysql-mode/1.overview-of-mysql-mode.md) topic in the Reference guide.
+For more information about system views, see [System views](../7.reference/5.system-reference/4.system-overview-of-mysql-mode/1.overview-of-mysql-mode.md).
 
 ## Character sets and collations
 
@@ -250,7 +250,7 @@ The optimizer of OceanBase Database is different from that of MySQL Database in 
 
 * OceanBase Database supports plan caching and precompilation, which are not supported by MySQL Database.
 
-For more information about the optimizer, see [SQL tuning](../7.reference/3.performance-tuning-guide/5.sql-optimization/1.sql-request-execution-process.md).
+For more information about the optimizer, see [SQL tuning](../7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/1.overview-of-sql-optimization.md)
 
 ## Unsupported features
 
