--- a/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/1.experience-scalable-oltp/1.run-the-tpc-c-test-on-oceanbase-database.md
+++ b/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/1.experience-scalable-oltp/1.run-the-tpc-c-test-on-oceanbase-database.md
@@ -38,7 +38,7 @@ The TPC-C benchmark involves the following five transaction types:
 
 The performance of OceanBase Database may vary depending on the type of OceanBase cluster that you have deployed. If you have deployed a single-node OceanBase cluster, you can observe the performance of OceanBase Database in standalone mode. If you want to try out the scalable OLTP capability of OceanBase Database's distributed architecture, it is recommended that you deploy an OceanBase cluster with at least three nodes.
 
-The example below uses the tenant mode `MySQL` and the tenant name `test`. To create your own tenant, follow the steps in [Try out the multitenancy feature](../4.experience-multi-tenant-features.md).
+The example below uses the tenant mode `MySQL` and the tenant name `test`. To create your own tenant, follow the steps in [Try out the multi-tenant feature](../4.experience-multi-tenant-features.md).
 
 ### Install BenchmarkSQL
 
