--- a/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/2.use-dbcat-to-migrate-table-structure-from-mysql-database-to-oceanbase-database.md
+++ b/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/2.use-dbcat-to-migrate-table-structure-from-mysql-database-to-oceanbase-database.md
@@ -103,7 +103,7 @@ Optional options:
 | Option | With parameters | Description |
 | ---- | ------- | ------ |
 | -f or --file | Y | The output path of the SQL file. |
-| --offline | N | Specifies to use the offline mode. | Specifies to use the offline mode. |
+| --offline | N | Specifies to use the offline mode. |
 | --target-schema | Y | The mode name of the destination database. |
 | --table | Y | Specifies to export the specified tables from the database. |
 | --view | Y | Specifies to export the specified views from the database. |
