--- a/en-US/6.manage/0.log-in-oceanbase-tenant.md
+++ b/en-US/6.manage/0.log-in-oceanbase-tenant.md
@@ -1,4 +1,4 @@
-# Log in to an OceanBase Database tenant
+# Log on to an OceanBase Database tenant
 
 OceanBase Database adopts a multi-tenant architecture. This architecture is suitable for resource consolidation, cloud services and other scenarios, and also reduces operational complexity.
 
@@ -6,13 +6,13 @@ As of OceanBase Database v4.0, there are three types of tenants: system tenant, 
 
 ![Tenant types 1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/EN_US/6.manage/2.tenant-management/Tenant%20type.jpg)
 
-## Log in to a system tenant
+## Log on to a system tenant
 
 The system tenant is a database instance used internally by the OceanBase Database to handle cluster-wide public tasks. The Root Service is based on the system tenant to undertake the management work of the OceanBase Database, including cluster management, tenant management, resource management, load balancing, scheduling of daily compaction tasks, and data migration and replication. The system tenant is the default tenant created for the cluster and is responsible for managing the lifecycle of the cluster and all tenants.
 
 The system tenant is compatible with MySQL mode and can be accessed through both the MySQL client and OceanBase client (OBClient).
 
-### Log in through the MySQL client
+### Log on through the MySQL client
 
 The database connection string for logging in through the MySQL client is shown as follows:
 
@@ -32,15 +32,15 @@ The main parameters are described as follows:
 
 * `-u`: account for logging in to the OceanBase Database. Unlike conventional databases, the account for the OceanBase Database contains more fields, including username, tenant name, and cluster name.
 
-   * If you log in through the ODP, you must specify the username, tenant name, and cluster name in the `username@tenant name#cluster name` format. For example, if you want to log in as the root user to the `sys` tenant of the `test` cluster, your account name is `root@sys#test`.
+   * If you log in through the ODP, you must specify the username, tenant name, and cluster name in the `username@tenant name#cluster name` format. For example, if you want to log on as the root user to the `sys` tenant of the `test` cluster, your account name is `root@sys#test`.
 
-   * If you log in through a direct connection to an OBServer node, you must specify the username and tenant name in the `username@tenant name` format. For example,if you want to log in as the root user to the `sys` tenant of the `test` cluster, your account name is `root@sys`.
+   * If you log in through a direct connection to an OBServer node, you must specify the username and tenant name in the `username@tenant name` format. For example,if you want to log on as the root user to the `sys` tenant of the `test` cluster, your account name is `root@sys`.
 
 * `-p`: password for logging in to the OceanBase Database. For a new cluster, the initial password for the root user of the `sys` tenant is empty. It is recommended to change the root user password using `alter user root identified by 'xxxxxx'` as the first step after creating a new cluster.
 
 For details about connecting to the OceanBase Database through the MySQL client, see [Connect to an OceanBase Database tenant by using a MySQL client](../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/2.connect-to-an-oceanbase-tenant-by-using-a-mysql-client-of-mysql-mode.md).
 
-### Log in through the OBClient
+### Log on through the OBClient
 
 OBClient is a recommended CLI client tool for logging in to the OceanBase Database. You can use your OBClient account in a MySQL client. The database connection string for logging in through the OBClient is shown as follows:
 
@@ -113,11 +113,11 @@ For details about connecting to the OceanBase Database through the OBClient, see
 
    After the command is executed, you can confirm whether the isolation is successful by checking the `STOP_TIME` field of the node in the `DBA_OB_SERVERS` view.
 
-## Log in to a user tenant
+## Log on to a user tenant
 
 A user tenant is created by a user. A user tenant can provide complete database services and supports MySQL and Oracle modes.
 
-To view information on all tenants, log in as a system tenant and query the `DBA_OB_TENANTS` view.
+To view information on all tenants, log on as a system tenant and query the `DBA_OB_TENANTS` view.
 
 * `TENANT_TYPE` specifies the tenant type. `SYS` is the system tenant, `META` is a meta tenant, and `USER` is a user tenant. The ID of the system tenant is 1. Among tenants whose ID is greater than 1000, even-numbered IDs indicate user tenants, and odd-numbered IDs indicate meta tenants. The ID of a user tenant is greater than that of its corresponding meta tenant by 1.
 
@@ -129,7 +129,7 @@ The database connection strings for logging in to a user tenant are almost ident
 
 For user tenants in MySQL mode, the built-in data dictionary views and dynamic performance views of OceanBase Database are all located in the `oceanbase` namespace. For user tenants in Oracle mode, the built-in views of OceanBase Database are located under the SYS user. The names, fields, and use experience of views are the same in both modes.
 
-## Log in to a meta tenant
+## Log on to a meta tenant
 
 Meta tenants are used for internal management in OceanBase Database. For each user tenant created, a corresponding meta tenant is automatically created whose lifecycle is the same as that of the user tenant. A meta tenant cannot be logged in directly, but its information can be accessed through the user tenant and system tenant.
 
