--- a/en-US/6.manage/4.high-availability/5.recyclebin-management/4.restore-the-recyclebin-objects.md
+++ b/en-US/6.manage/4.high-availability/5.recyclebin-management/4.restore-the-recyclebin-objects.md
@@ -162,7 +162,7 @@ You can restore tables from the recycle bin in the `sys` tenant, a MySQL user te
 
    <main id="notice" type='explain'>
    <h4>Note</h4>
-   <p>The default administrator user of a MySQL user tenant is <code>root</code> and that of an Oracle user tenant is <code>SYS<code>. </p>
+   <p>The default administrator user of a MySQL user tenant is <code>root</code> and that of an Oracle user tenant is <code>SYS</code>. </p>
    </main>
 
    Example (the command can vary in practice):
