--- a/en-US/6.manage/4.high-availability/5.recyclebin-management/5.purge-the-recyclebin.md
+++ b/en-US/6.manage/4.high-availability/5.recyclebin-management/5.purge-the-recyclebin.md
@@ -23,7 +23,7 @@ You can execute the `PURGE` statement to purge the recycle bin.
    <main id="notice" type='explain'>
    <h4>Note</h4>
    <ul>
-   <li>The administrator user of a MySQL user tenant is <code>root</code> and that of an Oracle user tenant is <code>SYS<code>. </li>
+   <li>The administrator user of a MySQL user tenant is <code>root</code> and that of an Oracle user tenant is <code>SYS</code>. </li>
    <li>If you want to purge tenants from the recycle bin, log on to the database as an administrator of the <code>sys</code> tenant. </li>
    </ul>
    </main>
