--- a/en-US/6.manage/4.high-availability/6.manage-flashback-query.md
+++ b/en-US/6.manage/4.high-availability/6.manage-flashback-query.md
@@ -26,7 +26,7 @@ Before you set the `undo_retention` parameter to perform a flashback query, chec
 
 <main id="notice" type='explain'>
         <h4>Note</h4>
-        <p>The administrator user of a MySQL user tenant is <code>root</code> and that of an Oracle user tenant is <code>SYS<code>. </p>
+        <p>The administrator user of a MySQL user tenant is <code>root</code> and that of an Oracle user tenant is <code>SYS</code>. </p>
    </main>
 
    Example (the command can vary in practice):
