--- a/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/2.password-complexity-of-mysql-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/2.password-complexity-of-mysql-mode.md
@@ -25,7 +25,7 @@ In MySQL mode of OceanBase Database, you can set a series of tenant-level system
 
 The following example provides guidance on setting password complexity rules. In this example, the password has a minimum length of 8 characters, including at least 3 uppercase or lowercase letters, and 1 special character. The password cannot be identical to the username, and the password check policy is set to  `medium`. 
 
-1. Log in to a MySQL tenant of a cluster using the root user. 
+1. Log on to a MySQL tenant of a cluster using the root user. 
 
    ```shell
    obclient -uroot@mysql -P2881 -h10.xxx.xxx.1 -p***1***
