--- a/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/3.login-failure-handling-of-mysql-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/3.login-failure-handling-of-mysql-mode.md
@@ -28,7 +28,7 @@ The default value of the `connection_control_failed_connections_threshold` confi
 
 ## Configuration example
 
-1. Log in to a MySQL tenant of a cluster using the root user. 
+1. Log on to a MySQL tenant of a cluster using the root user. 
 
    ```shell
    obclient -uroot@mysql -h127.1 -P2881 -p****1***
@@ -64,7 +64,7 @@ The default value of the `connection_control_failed_connections_threshold` confi
    ERROR 5039 (01007): User locked
    ```
 
-   Log in to a MySQL tenant of OceanBase Database using the root user, to view the login failure information. 
+   Log on to a MySQL tenant of OceanBase Database using the root user, to view the login failure information. 
 
    ```shell
    obclient> SELECT * FROM information_schema.CONNECTION_CONTROL_FAILED_LOGIN_ATTEMPTS;
