--- a/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/1.identification-of-oracle-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/1.identification-of-oracle-mode.md
@@ -13,7 +13,7 @@ In Oracle mode, this feature authenticates a user's username and password to rec
 
 In Oracle mode, the username is unique within a tenant, but users in different tenants can have the same usernames. Therefore, a user is uniquely identified globally in the system in the `username@tenant name` format. 
 
-1. Log in to an Oracle tenant of a cluster using the SYS user. 
+1. Log on to an Oracle tenant of a cluster using the SYS user. 
 
    ```shell
    obclient -usys@oracle -h10.xxx.xxx.1 - P2881 -P***1***
@@ -33,7 +33,7 @@ In Oracle mode, the username is unique within a tenant, but users in different t
    Query OK, 0 rows affected (0.045 sec)
    ```
 
-4. Log in to the cluster using user `u1`. 
+4. Log on to the cluster using user `u1`. 
 
    ```shell
    $obclient -h10.xxx.xxx.1 -P2881 -uu1@oracle001 -p**1*** -A
