--- a/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/2.password-complexity-of-oracle-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/2.password-complexity-of-oracle-mode.md
@@ -297,7 +297,7 @@ The `PASSWORD_VERIFY_FUNCTION` parameter allows passing the PL password complexi
 
 ## Check whether the password complexity setting is effective
 
-1. Log in to an Oracle tenant of a cluster using the SYS user. 
+1. Log on to an Oracle tenant of a cluster using the SYS user. 
 
    ```shell
    obclient -usys@oracle -h10.xxx.xxx.1 - P2881 -P***1***
@@ -322,7 +322,7 @@ After successfully setting the password complexity, if you need to view the spec
 
 Perform the following steps to view the complexity rules:
 
-1. Log in to an Oracle tenant of a cluster using the root user. 
+1. Log on to an Oracle tenant of a cluster using the root user. 
 
    ```shell
    obclient -usys@oracle -h10.xxx.xxx.1 - P2881 -P***1***
