--- a/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
@@ -100,7 +100,7 @@ The administrator can process login failures by creating a profile and applying 
 
 ## Example
 
-1. Log in to an Oracle tenant of a cluster using the SYS user.
+1. Log on to an Oracle tenant of a cluster using the SYS user.
 
    ```shell
    obclient -usys@oracle -h127.1 -P2881 -  P***1*** 
@@ -154,7 +154,7 @@ The administrator can process login failures by creating a profile and applying 
    ERROR 5039 (01007): User locked
    ```
 
-   Log in to the `sys` tenant using the `root` user and view information about failed login attempts. 
+   Log on to the `sys` tenant using the `root` user and view information about failed login attempts. 
 
    ```shell
    obclient> SELECT * FROM information_schema.CONNECTION_CONTROL_FAILED_LOGIN_ATTEMPTS;
