--- a/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/3.delegation-of-authority-of-mysql-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/3.delegation-of-authority-of-mysql-mode.md
@@ -6,7 +6,7 @@ Privilege delegation resolves the issue of centralized authorization. By specify
 
 * Failed privilege delegation
 
-   1. Log in to a MySQL tenant of a cluster using the root user. 
+   1. Log on to a MySQL tenant of a cluster using the root user. 
 
    2. Create user A, and grant privileges to this user without using the `WITH GRANT OPTION` clause. 
 
@@ -15,7 +15,7 @@ Privilege delegation resolves the issue of centralized authorization. By specify
       Query OK, 0 rows affected (0.034 sec)
       ```
 
-   3. Log in to the cluster as user A, create user B, and grant user B the same privileges as user A. An error is returned. 
+   3. Log on to the cluster as user A, create user B, and grant user B the same privileges as user A. An error is returned. 
 
       ```shell
       obclient> GRANT ALL PRIVILEGES ON *.* TO 'B' IDENTIFIED BY '**1***';
@@ -28,7 +28,7 @@ Privilege delegation resolves the issue of centralized authorization. By specify
       </main>
 
 * Successful privilege delegation
-   1. Log in to a MySQL tenant of a cluster as the root user. 
+   1. Log on to a MySQL tenant of a cluster as the root user. 
 
    2. Grant privileges to user A using the `WITH GRANT OPTION` clause.  
 
@@ -36,7 +36,7 @@ Privilege delegation resolves the issue of centralized authorization. By specify
       obclient> GRANT ALL PRIVILEGES ON *.* TO A with grant option;
       ```
 
-   3. Log in to the cluster as user A, create user B, and grant user B the same privileges as user A. A success message is returned. 
+   3. Log on to the cluster as user A, create user B, and grant user B the same privileges as user A. A success message is returned. 
 
       ```shell
       obclient> GRANT ALL PRIVILEGES ON *.* TO 'B' IDENTIFIED BY '**1***';
