--- a/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md
@@ -4,7 +4,7 @@ After creating a user, you can view the privileges of the user.
 
 ## Procedure
 
-1. Log in to a MySQL tenant as an administrator.
+1. Log on to a MySQL tenant as an administrator.
 
 2. Execute the following statements to view user privileges:
 
