--- a/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/6.view-user-permissions-of-oracle-mode.md
+++ b/en-US/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/6.view-user-permissions-of-oracle-mode.md
@@ -4,7 +4,7 @@ After creating a user, you can view the privileges of the user.
 
 ## Procedure
 
-1. Log in to an Oracle tenant of the database.
+1. Log on to an Oracle tenant of the database.
 
 2. Execute the following statements to view the privileges granted to a user:
 
