--- a/en-US/6.manage/5.security-and-permissions/3.access-control/3.network-security-access-control.md
+++ b/en-US/6.manage/5.security-and-permissions/3.access-control/3.network-security-access-control.md
@@ -17,7 +17,7 @@ You can specify the values in the following formats:
 
 ## View and set a tenant whitelist
 
-1. Log in to the `sys` tenant of a cluster using the root user. 
+1. Log on to the `sys` tenant of a cluster using the root user. 
 
    ```shell
    obclient -uroot@sys -P2881 -h10.xxx.xxx.1 -p***1***
