--- a/en-US/6.manage/5.security-and-permissions/4.data-transfer-encryption/2.observer-in-transmission-encryption.md
+++ b/en-US/6.manage/5.security-and-permissions/4.data-transfer-encryption/2.observer-in-transmission-encryption.md
@@ -6,7 +6,7 @@ The underlying communication between components such as OBServer node, liboblog,
 
 The method for enabling OBServer transmission encryption involves the use of multiple configuration items. To enable it, perform the following steps:
 
-1. Log in to the `sys` tenant as the root user.
+1. Log on to the `sys` tenant as the root user.
 
 2. Specify the method for loading the CA certificate, user certificate, and private key.
 
@@ -55,7 +55,7 @@ The most straightforward approach is to capture packets from the MySQL and RPC p
 
 ### Check whether SSL is enabled on the MySQL port
 
-Log in to an OBServer node from OBClient or a MySQL client and run the `\s` command to query the SSL field.
+Log on to an OBServer node from OBClient or a MySQL client and run the `\s` command to query the SSL field.
 
 ```shell
 obclient> \s
