--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/2.create-a-tenant.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/2.create-a-tenant.md
@@ -46,7 +46,7 @@ The following table describes the parameters in the syntax.
 | Parameter | Description |
 |--------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | IF NOT EXISTS | This parameter is optional. If the tenant name already exists and `IF NOT EXISTS` is not specified, an error will be reported.  |
-| tenant_name | Like a variable, a tenant name can contain up to 128 characters, which can be letters, digits, and underscores (`_`). The tenant name must start with a letter or an underscore (`_`) and cannot be a keyword of OceanBase Database.  For information about the keywords supported by OceanBase Database, see [Reserved keywords](../../../5.system-reference/8.reserved-keyword-of-mysql-mode.md) in Reference Guide (MySQL Mode) and [Reserved keywords](../../../5.system-reference/9.reserved-keywords-of-oracle-mode.md) in Reference Guide (Oracle Mode).  |
+| tenant_name | Like a variable, a tenant name can contain up to 128 characters, which can be letters, digits, and underscores (`_`). The tenant name must start with a letter or an underscore (`_`) and cannot be a keyword of OceanBase Database.  For information about the keywords supported by OceanBase Database, see [Reserved keywords](../../../5.system-reference/8.reserved-keyword-of-mysql-mode.md) and [Reserved keywords](../../../5.system-reference/9.reserved-keywords-of-oracle-mode.md).  |
 | RESOURCE_POOL_LIST | This parameter is required. You can allocate only one resource pool to a tenant when you create the tenant. If you want to add multiple resource pools for a tenant, you can modify the resource pool of the tenant after the tenant is created.  <blockquote>**Note** </br>The minimum memory size of a user tenant during resource pool allocation is controlled by the hidden parameter `__min_full_resource_pool_memory`. The default value is `5G`, and the value range is [1073741824, +∞). If you want to create a tenant for simple feature tests, you can change the value of `alter system __min_full_resource_pool_memory` to `1073741824` to allow a minimum memory size of 1 GB for new tenants. </blockquote> |
 | DEFAULT TABLEGROUP | Specifies the default table group of the tenant. When you set it to `NULL`, the system disables the default table group. If this parameter is not specified, the default value is `NULL`.  |
 | COMMENT | The comment for the tenant.  |
